@@ -1,6 +1,6 @@
 noinst_LTLIBRARIES = libjabberdlib.la
 
-noinst_HEADERS = jabberdlib.h
+include_HEADERS = jabberdlib.h
 
 libjabberdlib_la_SOURCES = base64.c karma.c sha.c xhash.c crc32.c jid.c pool.c snprintf.c xmlnode.c expat.c jpacket.c pproxy.c socket.c genhash.c jutil.c rate.c str.c xstream.c
 libjabberdlib_la_LIBADD = @LDFLAGS@
